# mulan

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  _rename_geometry.py  vcpkg.json
src/Document/: BoxGeometry.h  CMakeLists.txt  ConeGeometry.h  CylinderGeometry.h  Document.cpp  Document.h  DocumentIO.h  DocumentManager.cpp  DocumentManager.h  Entity.cpp  Entity.h  EntityHandle.cpp  EntityHandle.h  EntityId.cpp  EntityId.h  Geometry.h  IFileImporter.h  ImporterFactory.cpp  ImporterFactory.h  MeshGeometry.h  OCCTImporter.cpp  OCCTImporter.h  OCCTShapeGeometry.cpp  OCCTShapeGeometry.h  SphereGeometry.h  TorusGeometry.h
src/Modeling/: CMakeLists.txt  ModelingExport.h  Shape.h  ShapeFactory.cpp  ShapeFactory.h  ShapeImpl.h
src/app/: CMakeLists.txt  QtInteractionHost.cpp  QtInteractionHost.h  main.cpp  rhi_backends.cpp  rhi_backends.h
src/app/ui/: DocWidget.h  (+47 more)
src/asset/: CMakeLists.txt  asset.cpp  asset.h  asset_change.h  asset_id.h  asset_library.cpp  asset_library.h  brep_asset.cpp  brep_asset.h  curve_asset.cpp  curve_asset.h  curve_mesh_builder.cpp  curve_mesh_builder.h  face_asset.cpp  face_asset.h  geometry_asset.h  material_asset.h  mesh_asset.h  sketch_asset.cpp  sketch_asset.h  tessellated_asset.h  texture_asset.h
src/brep/: BRep.h  CMakeLists.txt
src/build-wasm/: CMakeLists.txt  main_wasm.cpp
src/command/: CMakeLists.txt  Command.h  CommandExport.h  CommandManager.cpp  CommandManager.h  MacroCommand.h  command.h  command_export.h  command_manager.h  macro_command.h
src/core/: CMakeLists.txt  CoreExport.h  core_export.h
src/document/: BoxGeometry.h  CMakeLists.txt  ConeGeometry.h  CylinderGeometry.h  Document.cpp  Document.h  DocumentExport.h  DocumentIO.h  DocumentManager.cpp  DocumentManager.h  Entity.cpp  Entity.h  EntityHandle.cpp  EntityHandle.h  EntityId.cpp  EntityId.h  Geometry.h  IFileImporter.h  ImporterFactory.cpp  ImporterFactory.h  MeshGeometry.h  OCCTImporter.cpp  OCCTImporter.h  OCCTShapeGeometry.cpp  OCCTShapeGeometry.h  SolidGeometryData.cpp  SolidGeometryData.h  SphereGeometry.h  TextGeometryData.cpp  TextGeometryData.h  TorusGeometry.h  document.cpp  document.h  document_export.h  shape_render_geometry.cpp  shape_render_geometry.h  solid_geometry_data.cpp  solid_geometry_data.h  text_geometry_data.cpp  text_geometry_data.h
src/editor/: CMakeLists.txt  pch.h
src/engine/: CMakeLists.txt  Window.h  engine_error_code.h  window.h
src/geometry/: BoundingBox.h  CMakeLists.txt  Geometry.h  Newton.cpp  Newton.h  Tolerance.h  Types.h
src/graphics/: CMakeLists.txt  graphics_backend.h  material_types.h  mesh.h  primitive_types.h
src/io/: CMakeLists.txt  FileManager.cpp  FileManager.h  IFileImporter.h  IOExport.h  ImporterFactory.cpp  ImporterFactory.h  OCCTImporter.cpp  OCCTImporter.h  assimp_importer.cpp  assimp_importer.h  document.cpp  document.h  document_editor.cpp  document_editor.h  file_importer.h  file_manager.cpp  file_manager.h  gltf_importer.cpp  gltf_importer.h  import_builder.cpp  import_builder.h  import_path_utils.h  import_result.h  importer_factory.cpp  importer_factory.h  importer_registry.cpp  io_export.h  mesh_import_builder.cpp  mesh_import_builder.h  obj_importer.cpp  obj_importer.h  occt_importer.cpp  occt_importer.h  parsed_scene.h  parsed_scene_loader.cpp  parsed_scene_loader.h  shape_render_geometry.cpp  shape_render_geometry.h
src/math/: CMakeLists.txt  math.h  math_export.h
src/modeling_core/: CMakeLists.txt  modeling_core_export.h  shape.cpp  shape.h  shape_file_reader.cpp  shape_file_reader.h
src/modeling_occt/: CMakeLists.txt  occt_shape_storage.h  occt_tessellator_internal.h  shape_factory.h  step_reader.h
src/qtapp/: CMakeLists.txt  main.cpp
src/render_scene/: CMakeLists.txt  render_scene.cpp  render_scene.h  scene_proxy.h
src/scene/: CMakeLists.txt  entity_dirty.h  entity_id.h  scene.cpp  scene.h  scene_change.h
src/view/: CMakeLists.txt  capture_batch.cpp  capture_batch.h  capture_image_encoder.cpp  capture_image_encoder.h  capture_request.cpp  capture_request.h  capture_service.cpp  capture_service.h  draw_command_builder.cpp  draw_command_builder.h  geometry_query.cpp  geometry_query.h  pch.h  preview_layer.cpp  preview_layer.h  render_item_builder.cpp  render_item_builder.h  render_material_resolver.cpp  render_material_resolver.h  render_queue.cpp  render_queue.h  render_runtime.cpp  render_runtime.h  render_runtime_command.h  render_runtime_host.cpp  render_runtime_host.h  render_scene.cpp  render_scene.h  render_submission.h  render_submission_builder.cpp  render_submission_builder.h  render_surface.cpp  render_surface.h  render_task.h  render_thread.cpp  render_thread.h  render_world_sync.cpp  render_world_sync.h  renderer.cpp  (+14 more)
src/world/: CMakeLists.txt  DynamicDrawList.cpp  DynamicDrawList.h  Entity.cpp  Entity.h  EntityDirty.h  GeometryData.h  MeshDrawCommand.cpp  MeshDrawCommand.h  RenderCollector.cpp  RenderCollector.h  SceneProxy.cpp  SceneProxy.h  StaticDrawList.cpp  StaticDrawList.h  SubMesh.h  ViewConfig.h  Viewport.cpp  Viewport.h  World.cpp  World.h  WorldTest.cpp  dynamic_draw_list.cpp  dynamic_draw_list.h  entity.cpp  entity.h  entity_dirty.h  geometry_data.h  scene_proxy.cpp  scene_proxy.h  static_draw_list.cpp  static_draw_list.h  sub_mesh.h  view_config.h  viewport.cpp  viewport.h  world.cpp  world.h
tests/core/: CMakeLists.txt  image_tests.cpp  log_tests.cpp  profiling_tests.cpp  thread_pool_tests.cpp
tests/editor/: CMakeLists.txt  document_integrity_tests.cpp  document_view_public_header_compile_test.cpp  editor_action_tests.cpp
tests/io/: CMakeLists.txt  gltf_importer_tests.cpp  import_security_tests.cpp  mesh_attribute_generator_tests.cpp  obj_importer_tests.cpp  parsed_scene_loader_tests.cpp
tests/math/: CMakeLists.txt  convex_hull_tests.cpp  curve_surface_tests.cpp  dynamic_bvh_tests.cpp  intersect_tests.cpp  math_tests.cpp  spatial_tests.cpp  triangulation_tests.cpp  voronoi_dcel_tests.cpp
tests/modeling/: CMakeLists.txt  occt_plugin_integration_tests.cpp  runtime_backend_tests.cpp  (+1 more)
(+1596 files in other folders)
